--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,11 @@ services:
       - nginx-net
     restart: unless-stopped
     command: /app/run_server.sh
-
+    environment:
+      VIRTUAL_HOST: gnps-explorer.ucsd.edu
+      VIRTUAL_PORT: 5854
+      LETSENCRYPT_HOST: gnps-explorer.ucsd.edu
+      LETSENCRYPT_EMAIL: miw023@ucsd.edu
 
 networks:
   nginx-net:
