--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,12 @@ services:
     restart: unless-stopped
     command: /app/run_server.sh
     environment:
-      VIRTUAL_HOST: gnps-explorer.ucsd.edu
+      #VIRTUAL_HOST: gnps-explorer.ucsd.edu
+      VIRTUAL_HOST: explorer.gnps2.org
       VIRTUAL_PORT: 5854
-      LETSENCRYPT_HOST: gnps-explorer.ucsd.edu
-      LETSENCRYPT_EMAIL: miw023@ucsd.edu
+      #LETSENCRYPT_HOST: gnps-explorer.ucsd.edu
+      LETSENCRYPT_HOST: explorer.gnps2.org
+      LETSENCRYPT_EMAIL: mwang87@gmail.com
 
 networks:
   nginx-net:
